--- a/Requirements.txt
+++ b/Requirements.txt
@@ -4,4 +4,4 @@
 -Система ролей.
 -Журналирование действий пользователя.
 -Сервис позволяет приобретать подписки на различные игры. 
--Сервис будет отображать информацию по играм, с указанием статуса игры (скоро доступна, доступна к покупке), корзиной (купить, оформить предзаказ, доступна к загрузке), и пакетам.
+-Сервис будет отображать информацию по играм, состоянием заказов, корзиной, компаниям, разработчикам, пользователям.
